assets/css/style.css
/* Importing Caveat and Quattrocento Sans from Google Font*/
@import url('https://fonts.googleapis.com/css2?family=Caveat&family=Quattrocento+Sans&display=swap');

* {
    margin: 0;
    padding: 0;
    border: none;
}

body {
    font-family: Quattrocento-Sans, sans-serif;
    color: #fff;
    background-color: #1c2226;
}

/* Headings and Logo */

h1, h2 {
    font-family: Caveat, sans-serif;
    text-transform: uppercase;
    letter-spacing: 4px;
    color: #f7933e;
}

#logo {
    float: left;
    font-size: 325%;
    margin-left: 30px;
}

/* Navigation Links */

#menu {
    font-size: 100%;
    letter-spacing: 4px;
}

#menu, #logo {
    line-height: 75px;
}

#menu li {
    float: right;
    list-style-type: none;
    margin-right: 50px;
}

#menu a {
    text-decoration: none;
    color: inherit;
}

#menu a:hover {
    border-bottom: 1px solid #fff;
}

.active {
    border-bottom: 1px solid #fff;
}

/* Hero Image */

#hero-outer {
    height: 600px;
    width: 100%;
    overflow: hidden;
    position: relative;
}

#cover-text, #cover-text h2 {
    color: #fff;
}

#cover-text2, #cover-text2 h2 {
    color: #000;
}

#hero-image {
    height: 600px;
    width: 100%;
    background: url('../images/akitabw.jpg') no-repeat center center;
    
    /* animates zoom out effect on loading page */
    animation-name: hero-zoom;
    animation-duration: 8s;
    animation-fill-mode: backwards;
}

/* Zoom Level for hero image */

@keyframes hero-zoom {
    from{
        transform: scale(1.3)
    }
    to{
        transform: scale(1)
    }
}

/* Overlay text for Hero Image */

#cover-text {
    font-size: 225%;
    font-family: Caveat, sans-serif;
    text-transform: uppercase;
    letter-spacing: 4px;
    text-align: center;
    width: 250px;
    height: 149px;
    padding: 15px 15px;
    background-color: rgba(0, 0, 0, .5);
    top: 50px;
    left: 100px;
    position: absolute;
}

#cover-text2 {
    font-size: 325%;
    font-family: Caveat, sans-serif;
    text-transform: uppercase;
    letter-spacing: 4px;
    text-align: center;
    width: 100%;
    top: 450px;
    background-color: rgba(255, 255, 255, .5);
    position: absolute;
}

/* Story Content */

#story-content {
    width: 1200px;
    margin: 50px auto;
}

/* Story Content Text */

.text-content-right, .text-content-left {
    display: inline-block;
    vertical-align: top;
    width: 580px;
}

.text-content-right, .img-content-right {
    float: right;
}

.text-content-left, .img-content-left {
    float: left;
}

hr {
    border-top: 2px solid #f7933e;
    width: 100%;
    margin: 5px 0;
}

/* Story Content Image */

.img-content-right, .img-content-left {
    width: 520px;
    height: 520px;
    padding: 0 30px 30px 30px;
    margin: 0 auto;
    display: inline-block;
    vertical-align: top;
    clear: both;
}

#hachiko-portrait-bg {
    background: url('../images/hachiko.jpg') no-repeat center center;
}

#waiting-img-bg {
    background: url('../images/hachiko_waiting.jpg') no-repeat center center;
}

#legacy-img-bg {
    background: url('../images/hachiko_legacy.jpg') no-repeat center center;
}

#legacy-img-bg, #waiting-img-bg, #hachiko-portrait-bg {
    height: 100%;
    border-radius: 10%;
}

/* Google maps wrapper and iframe */

#statue-google-maps {
    width:100%;
    text-align:center;
}

iframe {
    width: 900px;
    height: 300px;
    margin: 0 auto;
    filter: grayscale(100%);
    padding-bottom: 50px;
}

/* Social Network Links & Symbols (Awesomefont) in Footer */

.social-networks {
    text-align: center;
}

.social-networks > li {
    display: inline;
}

.social-networks i {
    font-size: 150%;
    margin: 1%;
    padding: 2%;
    color: #fff;
}

/* Media queries Sizes 1250px-950px, 950px-650px, 650px-360px and 360px-280px */

/* For larger to medium size screens from 1250px wide and down */
@media screen and (max-width: 1250px) {
    #story-content {
        width: 90%;
        margin: 50px auto;
    }

    .text-content-right, .text-content-left {
        width: 45%;
        margin-bottom: 40px;
        height: 524px;
    }

    .img-content-right, .img-content-left {
        width: 45%;
        padding: 0%;
        margin-bottom: 40px;
    }

    .text-content-right, .img-content-right {
        float: right;
    }
    
    .text-content-left, .img-content-left {
        float: left;
    }
}

/* For medium to low size screens from 950px wide and down */
@media screen and (max-width: 950px) {
    #menu {
        clear: left;
        float: left;
        margin-left: 30px;
        margin-bottom: 20px;
        line-height: 25px;
    }

    #hero-image {
        background: url('../images/akitabw-small.jpg') no-repeat center center;
    }

    #cover-text {
        left: 50px;
    }
    
    #cover-text2 {
        font-size: 200%;
    }

    .text-content-right, .img-content-right {
        float: left;
    }
    
    .text-content-left, .text-content-right, .img-content-left, .img-content-right {
        margin-left: 50%;
        transform: translateX(-50%);
        width: 525px;
    }

    .text-content-right, .text-content-left {
        height: auto;
    }

    iframe {
        width: 525px;
    }
}

/* For low to very low size screens from 650px wide and down */
@media screen and (max-width: 650px) {
    
    #menu li {
        margin-right: 10px;
    }
    
    .text-content-right, .text-content-left, .img-content-right, .img-content-left {
        width: 350px;
    }

    #cover-text {
        left: 10px;
        top: 300px;
        font-size: 150%;
        width: 200px;
        height: 100px;
        padding: 10px 10px;   
    }
    
    #cover-text2 {
        font-size: 125%;
    }

    .img-content-right, .img-content-left {
        width: 300px;
        height: 300px;
        padding: 0 30px 30px 30px;
    }

    #hachiko-portrait-bg {
        background: url('../images/hachiko-small.jpg') no-repeat center center;
    }
    
    #waiting-img-bg {
        background: url('../images/hachiko_waiting-small.jpg') no-repeat center center;
    }
    
    #legacy-img-bg {
        background: url('../images/hachiko_legacy-small.jpg') no-repeat center center;
    }
    iframe {
        width: 350px;
    }
}

/* For miniscule size screens from 360px wide and down */
@media screen and (max-width: 360px) {
    #logo {
        margin-left: 10px;
    }   

    #menu {
        margin-left: 10px;
    }
    
    #menu li {
        margin-right: 5px;
        font-size: 85%;
    }
    
    #cover-text2 {
        font-size: 100%;
    }

    .text-content-left, .text-content-right, .img-content-left, .img-content-right {
        width: 250px;
    }

    iframe {
        width: 250px;
    }

    .text-content-left h2, .text-content-right h2 {
        font-size: 120%;
    }
}

